--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Documentation</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script type='text/javascript' src='shapeGen.js'></script>
+		<script type='text/javascript' src='shapeGen.min.js'></script>
         <link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
